--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,7 @@ services:
   api-gateway:
     build:
       context: ./backend/api-gateway
-    container_name: payment-gateway-service
+    container_name: api-gateway-service
     ports:
       - "8000:8000"
     networks:
