--- a/frontend/package.json
+++ b/frontend/package.json
@@ -35,6 +35,7 @@
     "jwt-decode": "^4.0.0",
     "lucide-react": "^0.473.0",
     "react": "^18.3.1",
+    "react-camera-pro": "^1.4.0",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.54.2",
     "react-responsive": "^10.0.0",
