--- a/frontend/package.json
+++ b/frontend/package.json
@@ -38,6 +38,7 @@
     "react-camera-pro": "^1.4.0",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.54.2",
+    "react-live-clock": "^6.1.25",
     "react-responsive": "^10.0.0",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
